name:                yesod-gitrepo
version:             0.1.0.0
synopsis:            Host content provided by a Git repo
-- description:         
homepage:            https://github.com/snoyberg/yesod-gitrepo
license:             MIT
license-file:        LICENSE
author:              Michael Snoyman
maintainer:          michael@snoyman.com
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Yesod.GitRepo
  build-depends:       base < 5
                     , classy-prelude-yesod >=0.10
                     , temporary >=1.2
                     , directory
                     , yesod-core >=1.4 && <1.5
                     , wai >=3.0
                     , http-types
                     , process >=1.1
  default-language:    Haskell2010
